syntax = "proto3";
import "tx.proto";
import "blockHeader.proto";

message Block {
    BlockHeader header = 1;
    bytes miner = 2; //Address
    repeated Tx txs = 3;
}

message BlockDB {
    int32 height = 1;
    int32 fileNumber = 2;
    int32 offset = 3;
    BlockHeader header = 4;
    int32 length = 5;
}